--- a/test_page.html
+++ b/test_page.html
@@ -10,7 +10,7 @@
 <template id="ppltable">
 <table>
 <tr><th>First Name</th><th>Last Name</th><th>Year of birth</th><th>Sex</th><th>Properties</th></tr>
-<tr data-name="rows" >
+<tr data-name="rows[]" >
 	<td data-name="first_name"></td>
 	<td data-name="last_name"></td>
 	<td data-name="birth"></td>
@@ -31,6 +31,7 @@
 		<input type="checkbox" name="properties" value="fat"/> Fat<br />
 		<input type="checkbox" name="properties" value="hair"/> Have hair<br />
 		<input type="checkbox" name="properties" value="mustache"/> Have mustache</td></tr>
+<tr><td>notes</td><td contenteditable="true" data-name="notes" data-format="text"></td></tr>
 </table>
 </template>
 <template id="mainpage">
