--- a/test/test_page.html
+++ b/test/test_page.html
@@ -11,7 +11,7 @@
 
 <template id="ppltable">
 <table>
-<tr><th><input type="checkbox" name="deleteall" value="true"></th><th>First Name</th><th>Last Name</th><th>Year of birth</th><th>Sex</th><th>Properties</th></tr>
+<tr><th><input type="checkbox" name="deleteall" value="true"></th><th>First Name</th><th>Last Name</th><th>Year of birth</th><th>Sex</th><th>Properties</th><th></th></tr>
 <tr data-name="rows[]" >
 	<td><input type="checkbox" name="delete" value="true"></td>
 	<td data-name="first_name"></td>
