multiple names are separated by space. Remove template fragment from DOM for collections

--- a/test/test_page.html
+++ b/test/test_page.html
@@ -13,7 +13,7 @@
 <table>
 <tr><th><input type="checkbox" name="deleteall" value="true"></th><th>First Name</th><th>Last Name</th><th>Year of birth</th><th>Sex</th><th>Properties</th><th></th></tr>
 <tr data-name="rows[]" >
-	<td><input type="checkbox" name="delete" value="true"></td>
+	<td><input type="chxeckbox" name="delete" value="true"></td>
 	<td data-name="first_name"></td>
 	<td data-name="last_name"></td>
 	<td data-name="birth"></td>
@@ -21,6 +21,7 @@
 	<td data-name="properties"></td>	
 	<td><button data-name="editbutt">Edit</button></td>
 </tr>
+<tr><td colspan="7" style="font-size:0.7rem;text-align: center">Example of table footer</td></tr>
 </table>
 <button data-name="addbut" class="dlgbutt">Add</button>
 <button data-name="delbutt" class="dlgbutt_left">Erase</button>
