--- a/test/test_page.html
+++ b/test/test_page.html
@@ -13,7 +13,7 @@
 <table>
 <tr><th><input type="checkbox" name="deleteall" value="true"></th><th>First Name</th><th>Last Name</th><th>Year of birth</th><th>Sex</th><th>Properties</th><th></th></tr>
 <tr data-name="rows[]" >
-	<td><input type="chxeckbox" name="delete" value="true"></td>
+	<td><input type="checkbox" name="delete" value="true"></td>
 	<td data-name="first_name"></td>
 	<td data-name="last_name"></td>
 	<td data-name="birth"></td>
@@ -31,12 +31,13 @@
 <tr><td>First name</td><td><input type="text" name="first_name" /></td></tr>
 <tr><td>Last name</td><td><input type="text" name="last_name" /></td></tr>
 <tr><td>Year of birth</td><td><input type="text" name="birth" /></td></tr>
-<tr><td>Sex</td><td><input type="radio" name="sex" value="male"/> Male<br /><input type="radio" name="sex" value="female"/> Female</td></tr>
+<tr><td>Sex</td><td><input type="radio" name="sex" value="male"/> Male<br />
+    <input type="radio" name="sex" value="female"/> Female</td></tr>
 <tr><td>Properties</td><td>
 		<input type="checkbox" name="properties" value="tall"/> Tall<br />
 		<input type="checkbox" name="properties" value="fat"/> Fat<br />
-		<input type="checkbox" name="properties" value="hair"/> Have hair<br />
-		<input type="checkbox" name="properties" value="mustache"/> Have mustache</td></tr>
+		<input type="checkbox" name="properties" value="hairs"/> Has hairs<br />
+		<input type="checkbox" name="properties" value="mustache"/> Has mustache</td></tr>
 <tr><td>notes</td><td contenteditable="true" data-name="notes" data-format="text"></td></tr>
 <tr><td></td><td>
 <button data-name="cancelbutt" class="dlgbutt">Cancel</button>
