--- a/test/test_page.html
+++ b/test/test_page.html
@@ -10,23 +10,23 @@
 <script type="text/javascript" src="test_page.js"></script>
 
 <template id="ppltable">
-<table>
+<table class="ppltable">
 <tr><th><input type="checkbox" name="deleteall" value="true"></th><th>First Name</th><th>Last Name</th><th>Year of birth</th><th>Sex</th><th>Properties</th><th></th></tr>
-<tr data-name="rows[]" >
+<tr data-name="rows[]" data-close-anim="delrow" data-open-anim="addrow">
 	<td><input type="checkbox" name="delete" value="true"></td>
 	<td data-name="first_name"></td>
 	<td data-name="last_name"></td>
 	<td data-name="birth"></td>
 	<td data-name="sex"></td>
 	<td data-name="properties"></td>	
-	<td><button data-name="editbutt">Edit</button></td>
+	<td><div  class="button"  data-name="editbutt">Edit</div></td>
 </tr>
 <tr><td colspan="7" style="font-size:0.7rem;text-align: center">Example of table footer</td></tr>
 </table>
 <button data-name="addbut" class="dlgbutt">Add</button>
 <button data-name="delbutt" class="dlgbutt_left">Erase</button>
 </template>
-<template id="fillform" data-tag="dlg-box">
+<template id="fillform"><dlg-box data-close-anim="close" data-open-anim="open">
 <table>
 <tr><td>First name</td><td><input type="text" name="first_name" /></td></tr>
 <tr><td>Last name</td><td><input type="text" name="last_name" /></td></tr>
@@ -43,12 +43,12 @@
 <button data-name="cancelbutt" class="dlgbutt">Cancel</button>
 <button data-name="okbutt" class="dlgbutt">Ok</button></td>
 </table>
+</dlg-box>
 </template>
 <template id="mainpage">
 <div data-name="tablepart"></div>
 <div data-name="formpart"></div>
 </template>
-<div id="workspace"></div>
 </body>
 </html>
 
