--- a/test/test_page.html
+++ b/test/test_page.html
@@ -11,9 +11,9 @@
 
 <template id="ppltable">
 <table class="ppltable">
-<tr><th><input type="checkbox" name="deleteall" value="true"></th><th>First Name</th><th>Last Name</th><th>Year of birth</th><th>Sex</th><th>Properties</th><th></th></tr>
+<tr><th><input type="checkbox" name="deleteall"></th><th>First Name</th><th>Last Name</th><th>Year of birth</th><th>Sex</th><th>Properties</th><th></th></tr>
 <tr data-name="rows[]" data-close-anim="delrow" data-open-anim="addrow">
-	<td><input type="checkbox" name="delete" value="true"></td>
+	<td><input type="checkbox" name="delete"></td>
 	<td data-name="first_name"></td>
 	<td data-name="last_name"></td>
 	<td data-name="birth"></td>
